<resources>
    <string name="app_name">learn_01</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="et_username">请输入账号</string>
    <string name="et_password">请输入密码</string>
    <string name="button">按钮</string>
    <string name="name">name</string>
    <string name="image">image</string>
    <string name="ceshi">ceshi</string>
    <string name="ceshi1">ceshi1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
